K8s/userprofile/minimal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userprofile-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api/userprofile
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port:
              number: 80
